refactor: remove unused line code
